node editor base