@@ -441,6 +441,27 @@
                         </lifecycleMappingMetadata>
                     </configuration>
                 </plugin>
+                <plugin>
+                    <groupId>org.openjfx</groupId>
+                    <artifactId>javafx-maven-plugin</artifactId>
+                    <version>${javafx.maven.plugin.version}</version>
+                    <configuration>
+                        <options>
+                            <option>--add-opens</option>
+                            <option>javafx.graphics/javafx.scene=ALL-UNNAMED</option>
+                            <option>--add-exports</option>
+                            <option>javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED</option>
+                            <option>--add-exports</option>
+                            <option>javafx.base/com.sun.javafx.event=ALL-UNNAMED</option>
+                            <option>--add-exports</option>
+                            <option>javafx.graphics/com.sun.javafx.scene.traversal=ALL-UNNAMED</option>
+                            <option>--add-exports</option>
+                            <option>javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED</option>
+                            <option>--add-exports</option>
+                            <option>javafx.graphics/com.sun.glass.ui=ALL-UNNAMED</option>
+                        </options>
+                    </configuration>
+                </plugin>
             </plugins>
         </pluginManagement>
     </build>
@@ -608,18 +629,18 @@
     <properties>
         <maven.compiler.release>11</maven.compiler.release>
         <javafx.version>16</javafx.version>
-        <javafx.maven.plugin.version>0.0.6</javafx.maven.plugin.version>
+        <javafx.maven.plugin.version>0.0.8</javafx.maven.plugin.version>
 
-        <kotlin.version>1.6.10</kotlin.version>
+        <kotlin.version>1.8.0</kotlin.version>
         <main.class>kotlin.KotlinHelloKt</main.class>
         <kotlin.compiler.incremental>true</kotlin.compiler.incremental>
-        <kotlin.compiler.languageVersion>1.6</kotlin.compiler.languageVersion>
-        <kotlin.compiler.jvmTarget>1.8</kotlin.compiler.jvmTarget>
+        <kotlin.compiler.languageVersion>1.8</kotlin.compiler.languageVersion>
+        <kotlin.compiler.jvmTarget>11</kotlin.compiler.jvmTarget>
 
-        <junit.version>5.8.2</junit.version>
+        <junit.version>5.9.2</junit.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
     </properties>
 
     <dependencies>
@@ -644,7 +665,7 @@
         <dependency>
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
-            <version>3.22.0</version>
+            <version>3.24.2</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -657,10 +678,11 @@
             <artifactId>testfx-junit5</artifactId>
             <version>4.0.16-alpha</version>
         </dependency>
+        <!-- jdk-9+181 for Java 9, jdk-11+26 for Java 11 -->
         <dependency>
             <groupId>org.testfx</groupId>
             <artifactId>openjfx-monocle</artifactId>
-            <version>jdk-12.0.1+2</version> <!-- jdk-9+181 for Java 9, jdk-11+26 for Java 11 -->
+            <version>jdk-12.0.1+2</version>
             <scope>test</scope>
         </dependency>
 
@@ -672,6 +694,11 @@
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-fxml</artifactId>
+            <version>${javafx.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-swing</artifactId>
             <version>${javafx.version}</version>
         </dependency>
 
